--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 198.57.27.225, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇸🇬 新加坡-651.1KB/s(Youtube:不良林), server: 129.226.214.101, port: 51332, type: vmess, uuid: 6951282c-94d5-4f5d-cbc5-1e97f90bfe39, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.94MB/s(Youtube:不良林), server: 198.57.27.225, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林), server: 213.183.53.207, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇸🇬 新加坡-1016.9KB/s(Youtube:不良林), server: 129.226.216.121, port: 49381, type: vmess, uuid: 2f6d0f82-80c4-42ed-fd46-c76e7cc81de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-575.2KB/s(Youtube:不良林), server: 213.183.53.207, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇨🇦 加拿大-2.57MB/s(Youtube:不良林), server: 198.57.27.225, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-2.85MB/s(Youtube:不良林), server: 198.57.27.225, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇸🇬 新加坡-177.9KB/s(Youtube:不良林), server: 129.226.94.134, port: 31149, type: vmess, uuid: 883557f2-88c9-4963-bd0e-2083353f7901, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.34MB/s(Youtube:不良林), server: 129.226.94.145, port: 51848, type: vmess, uuid: ad4757f1-e28c-47b8-970c-51b232c653d8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 169.197.142.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2, server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1016.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-575.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-177.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1016.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-575.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-177.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1016.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-575.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-177.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1016.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-575.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-177.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1016.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-575.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-177.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1016.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-575.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-177.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1016.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-575.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-177.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
