--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 198.57.27.225, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 198.57.27.225, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 乌克兰-2.21MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇭🇰 香港-4.05MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: 169.197.142.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇷🇺 俄罗斯联邦-234.6KB/s(Youtube:不良林), server: 213.183.53.207, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇳🇱 荷兰-231.1KB/s(Youtube:不良林), server: 213.183.59.211, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-2.92MB/s(Youtube:不良林), server: 198.57.27.225, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇳🇱 荷兰-240.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇭🇰 香港-4.00MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-991.3KB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 乌克兰-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 乌克兰-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 乌克兰-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 乌克兰-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 乌克兰-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 乌克兰-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 乌克兰-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-231.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
