--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.10MB/s(Youtube:不良林), server: 134.195.196.231, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇷🇺 俄罗斯联邦-815.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-488.5KB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 波兰-157.6KB/s(Youtube:不良林), server: 217.30.10.65, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇬🇧 英国-937.8KB/s(Youtube:不良林), server: 152.89.210.105, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇬🇧 英国-1.02MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇬🇧 英国-1.48MB/s(Youtube:不良林), server: 152.89.210.84, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇬🇧 英国-1.73MB/s(Youtube:不良林), server: 152.89.210.84, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇬🇧 英国-1.89MB/s(Youtube:不良林), server: 152.89.210.84, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-657.9KB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-529.0KB/s(Youtube:不良林), server: 169.197.142.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 134.195.196.231, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇬🇧 英国-1.20MB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 134.195.196.231, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.196.231, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 134.195.196.231, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-890.5KB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-815.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.5KB/s(Youtube:不良林)
-      - 波兰-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-937.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-815.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.5KB/s(Youtube:不良林)
-      - 波兰-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-937.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-815.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.5KB/s(Youtube:不良林)
-      - 波兰-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-937.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-815.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.5KB/s(Youtube:不良林)
-      - 波兰-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-937.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-815.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.5KB/s(Youtube:不良林)
-      - 波兰-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-937.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-815.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.5KB/s(Youtube:不良林)
-      - 波兰-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-937.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-815.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.5KB/s(Youtube:不良林)
-      - 波兰-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-937.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-657.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-529.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
